# graph-engine

./: .gitignore  README.md  analyze_imports.py  check_api.py  create_dummy_files.py  debug_parser.py  direct_hook_test.py  dynamic_analysis_demo.py  exercise_imports.py  generate_graph_snapshot.py  graph_data.json  instrumentation_demo.py  instrumentation_manager_demo.py  json_storage_demo.py  nested_demo.py  performance_demo.py  pyproject.toml  requirements.txt  run_api_server.py  run_graph_manager.py  run_watcher.py  setup.py  unified_graph_server.py
.github/workflows/: ci.yml  generate-snapshot.yml
data/: graph_data.json
docs/: using_mcp.md
frontend/: README.md  graph.js  index.html  styles.css
graph_core/: __init__.py  api.py  manager.py  mcp_integration.py
graph_core/analyzer/: __init__.py  python_parser.py
graph_core/dynamic/: __init__.py  import_hook.py
graph_core/security/: __init__.py  (+2 more)
mcp_integration/: mcp_endpoint.py
performance/: profiler.py
src/: example.py  nested_example.py  new_example.py  sample.js  sample.py  sample.tsx  sample_module.py
tests/: __init__.py  test_api.py  test_artifact_generation.py  test_dependency_graph_manager.py  test_file_watcher.py  test_filtering_and_caching.py  test_frontend.py  test_function_renames.py  test_graph_builder.py  test_import_hook.py  test_in_memory_graph.py  test_interpret_llm_request.py  test_json_storage.py  test_mcp_integration.py  test_performance.py  test_python_parser.py  test_rename_detection.py  test_rename_integration.py  test_secret_scanner.py  test_treesitter_parser.py
(+13 files in other folders)
