[project]
name = "graph-engine"
version = "0.1.0"
description = "A graph engine for analyzing and visualizing codebases."
readme = "README.md"
authors = [{ name = "Deskree", email = "hello@deskree.com" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "watchfiles>=0.18.0",
    "tree-sitter==0.20.1",
    "gremlinpython==3.6.3",
    "setuptools>=65.5.1",
    "mcp>=1.2.0",
    "networkx>=2.6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "requests>=2.26.0",
    "httpx>=0.23.0",
    "pytest-asyncio==0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.scripts]
build_languages = "graph_core.analyzer.treesitter_parser.build_languages:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["graph_core*"]

[tool.uv]
# You can add uv-specific configurations here if needed in the future.